# ModernCmakePractice

./: .gitignore  CMake 常见错误及解决方案大揭秘.md  CMake中add_subdirectory的正确用法.md  README.md  _sidebar.md  index.html  现代CMake最佳实践完整示例.md
MyDemo/: CMakeLists.txt
MyDemo/cmake/: MyDemoConfig.cmake.in
MyDemo/include/MyDemo/: math_api.h
MyDemo/src/: CMakeLists.txt
MyDemo/src/app/: CMakeLists.txt  main.cpp
MyDemo/src/math/: CMakeLists.txt  math_utils.cpp  math_utils.h
MyDemo/tests/: CMakeLists.txt  math_test.cpp
